# sentinel_life-os

./: .env.example  .gitignore  LICENSE  README.md  nx.json  package-lock.json  package.json  tsconfig.base.json
.atl/: .skill-registry.cache.json  skill-registry.md
.github/workflows/: ci.yml
apps/android/: build.gradle.kts  settings.gradle.kts
apps/android/app/: build.gradle.kts  proguard-rules.pro
apps/backend/: Dockerfile  pyproject.toml
apps/backend/src/: config.py  main.py
apps/backend/src/core/: database.py  deps.py  security.py
apps/backend/src/middleware/: rate_limit.py
apps/backend/src/models/: db.py  schemas.py  shared.py
apps/backend/src/routers/: activities.py  auth.py  deportes.py  gimnasio.py  modules.py
apps/backend/src/services/: __init__.py  ai_coach.py  auth_service.py  calendar_service.py  exercise_seed.py  gamification_service.py  race_calendar_service.py  routine_service.py  sport_seed.py  sport_service.py  training_plan_service.py  workout_service.py
apps/backend/tests/: conftest.py  test_deportes.py  test_gimnasio_router.py  test_gimnasio_services.py
apps/web/: angular.json  package.json  tsconfig.json  vercel.json
apps/web/src/: index.html  styles.scss
apps/web/src/app/: app.component.ts  app.config.ts  app.routes.ts
docker/: docker-compose.prod.yml  docker-compose.yml  tunnel-config.yml
libs/shared/kotlin/: Activity.kt  Module.kt  User.kt
libs/shared/models/: __init__.py
libs/shared/tokens/: tokens.json
libs/shared/typescript/: activity.ts  module.ts  user.ts
tools/token-pipeline/: generate.py  validate.py
(+79 files in other folders)
