[project]
name = "sentinel-life-os-backend"
version = "0.1.0"
description = "Sentinel Life OS — FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic[email]>=2.7.0",
    "pydantic-settings>=2.3.0",
    "sqlalchemy>=2.0.30",
    "pyjwt>=2.8.0",
    "bcrypt>=4.1.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["setuptools>=69.5.0"]
build-backend = "setuptools.backends._legacy:_Backend"
